# my-slambook

./: README.md
ch2-cmake/: CMakeLists.txt
ch3-eigen&pangolin/: CMakeLists.txt
ch3-eigen&pangolin/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3-eigen&pangolin/useGeometry/: eigenGeometry.cpp
ch3-eigen&pangolin/visualizeGeometry/: CMakeLists.txt
ch4-Sophus/: CMakeLists.txt  ch4.kdev4
ch4-Sophus/.kdev4/: ch4.kdev4
ch4-Sophus/example/: CMakeLists.txt  trajectoryError.cpp
ch5/: CMakeLists.txt
ch5-opencv-pangolin/: CMakeLists.txt
ch5-opencv-pangolin/rgbd/: joinMap.cpp
ch5-opencv-pangolin/stereo/: stereoVision.cpp
ch5/rgbd/: CMakeLists.txt
